# dppcmd

./: CMakeLists.txt  README.md
dpp-command-handler/: commandfunction.h  commandinfo.cpp  commandinfo.h  commandparser.cpp  commandparser.h  module.cpp  module.h  moduleservice.cpp  moduleservice.h  precondition.h  variantfunction.h
dpp-command-handler/commands/: commandexecution.h  commandfunction.h  commandinfo.cpp  commandinfo.h  commandparser.cpp  commandparser.h  exceptions.cpp  exceptions.h  precondition.h  remainder.h
dpp-command-handler/extensions/: cache.cpp  cache.h
dpp-command-handler/modules/: module.h  modulebase.cpp  modulebase.h
dpp-command-handler/readers/: channeltypereader.cpp  channeltypereader.h  guildmembertypereader.cpp  guildmembertypereader.h  roletypereader.cpp  roletypereader.h  typereader.h  usertypereader.cpp  usertypereader.h
dpp-command-handler/results/: commanderror.h  commandresult.h  preconditionresult.h  result.h  typereaderresult.h
dpp-command-handler/services/: basecommandservice.cpp  basecommandservice.h  commandservice.cpp  commandservice.h  moduleservice.cpp  moduleservice.h
dpp-command-handler/utils/: cache.cpp  cache.h  ezcoro.h  function_traits.h  join.h  lexical_cast.cpp  lexical_cast.h  mentions.cpp  mentions.h  strings.cpp  strings.h  traits.h  tuple_traits.h  type_traits.h
dppcmd/commands/: commandexecution.h  commandfunction.h  commandinfo.cpp  commandinfo.h  commandparser.cpp  commandparser.h  exceptions.cpp  exceptions.h  precondition.h  remainder.h
dppcmd/extensions/: cache.cpp  cache.h
dppcmd/modules/: module.h  modulebase.cpp  modulebase.h
dppcmd/readers/: channeltypereader.cpp  channeltypereader.h  guildmembertypereader.cpp  guildmembertypereader.h  roletypereader.cpp  roletypereader.h  typereader.h  usertypereader.cpp  usertypereader.h
dppcmd/results/: commanderror.h  commandresult.h  preconditionresult.h  result.h  typereaderresult.h
dppcmd/services/: basecommandservice.cpp  basecommandservice.h  commandservice.cpp  commandservice.h  moduleservice.cpp  moduleservice.h
dppcmd/utils/: ezcoro.h  function_traits.h  join.h  lexical_cast.cpp  lexical_cast.h  mentions.cpp  mentions.h  strings.cpp  strings.h  tuple_traits.h  type_traits.h
